--- a/Army_of_Ancient_Russia/Army_of_Ancient_Russia/Army_of_Ancient_Russia.vcxproj.filters
+++ b/Army_of_Ancient_Russia/Army_of_Ancient_Russia/Army_of_Ancient_Russia.vcxproj.filters
@@ -21,9 +21,27 @@
     <ClCompile Include="C_Army.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="C_Army_Infantry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C_Army_Cavalry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C_Army_Fleet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C_Army.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C_Army_Infantry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C_Army_Cavalry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C_Army_Fleet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
