--- a/Army_of_Ancient_Russia/Army_of_Ancient_Russia/Army_of_Ancient_Russia.vcxproj.filters
+++ b/Army_of_Ancient_Russia/Army_of_Ancient_Russia/Army_of_Ancient_Russia.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="C_Army_Fleet.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="C_Armaments.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C_Army.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="C_Army_Fleet.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C_Armaments.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
