--- a/Army_of_Ancient_Russia/Army_of_Ancient_Russia/Army_of_Ancient_Russia.vcxproj.filters
+++ b/Army_of_Ancient_Russia/Army_of_Ancient_Russia/Army_of_Ancient_Russia.vcxproj.filters
@@ -33,6 +33,15 @@
     <ClCompile Include="C_Armaments.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="C_Armaments_Protective.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C_Armaments_ThrowingMachines.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="C_Armaments_Offensive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C_Army.h">
@@ -48,6 +57,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="C_Armaments.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C_Armaments_Protective.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C_Armaments_ThrowingMachines.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C_Armaments_Offensive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
